Second_Study/src/main/java/com/example/global/error/ErrorResponse/CustomErrorResponse.java
package com.example.global.error.ErrorResponse;public class CustomErrorResponse {
}
